--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,17 @@
     <string name="edit">Edit</string>
     <string name="select_image">Select Image</string>
     <string name="contact_info">Contact Info</string>
-    <string name="delete_confirm">Delete Item?</string>
-    <string name="delete_message">Are you sure you want to delete this item?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
     <string name="fill_fields">Please fill all fields</string>
+
+    <!-- Delete Dialog -->
+    <string name="delete_dialog_title">Delete Item</string>
+    <string name="delete_dialog_message">Are you sure you want to delete \"%1$s\"?</string>
+    <string name="delete_confirm">Delete</string>
+    <string name="cancel">Cancel</string>
+
+    <!-- Formatting -->
+    <string name="price_format">%1$s $</string>
+
+    <!-- Menu -->
+    <string name="about">About</string>
 </resources>
