--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,28 +8,21 @@
     <string name="edit">Edit</string>
     <string name="select_image">Select Image</string>
     <string name="contact_info">Contact Info</string>
-    <string name="delete_confirm">Delete Item?</string>
-    <string name="delete_message">Are you sure you want to delete this item?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
     <string name="fill_fields">Please fill all fields</string>
 
-<!--    Home Page-->
-    <!--    Tool Bar-->
+    <!-- Dialogs and Menus -->
+    <string name="delete_dialog_title">Delete Item</string>
+    <string name="delete_dialog_message">Are you sure you want to delete \"%1$s\"?</string>
+    <string name="delete_confirm">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="about">About</string>
+
+    <!-- Formatting -->
+    <string name="price_format">%1$s $</string>
+
+    <!--    Home Page Categories -->
     <string name="all_btn">All</string>
     <string name="books_btn">Books</string>
     <string name="clothing_btn">Clothing</string>
     <string name="art_btn">Art</string>
-
-<!--    Item's name-->
-    <string name="high_heels">High Heels</string>
-    <string name="the_little_prince">The Little Prince</string>
-    <string name="macbook">MackBook</string>
-    <string name="monet_painting">Irises By Monet</string>
-
-<!--        Item's prices-->
-    <string name="forty_five">45$</string>
-    <string name="ten">10$</string>
-    <string name="five_hundred">500$</string>
-    <string name="one_thousand">1000$</string>
 </resources>
