--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="shopping_cart">Shopping Cart</string>
     <string name="proceed_to_payment">Proceed to Payment</string>
     <string name="checkout_summary">Checkout Summary</string>
-    <string name="checkout_details">Total Items: %1$d\nTotal Price: $%2$d</string>
+    <string name="checkout_details">Total Items: %1$d\nTotal Price: %2$.2f $</string>
     <string name="ok">OK</string>
     <string name="total_price_format">Total: $%.2f</string>
 </resources>
